--- a/build.gradle
+++ b/build.gradle
@@ -98,6 +98,10 @@ dependencies {
 
     // MariaDB JDBC driver for DB access (optional at runtime)
     localRuntime "org.mariadb.jdbc:mariadb-java-client:3.1.3"
+    // MySQL JDBC driver (optional at runtime)
+    localRuntime "com.mysql:mysql-connector-j:8.3.0"
+    // SQLite JDBC driver (optional at runtime)
+    localRuntime "org.xerial:sqlite-jdbc:3.45.3.0"
 
     // Example optional mod dependency with JEI
     // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
