added rollback for items
Add rollback scope flags: /gl rollback now accepts items-only or blocks-only, manager filters accordingly, and README documents the new flags.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -23,7 +23,10 @@
       "label": "Gradle Clean Build",
       "type": "shell",
       "command": "./gradlew.bat clean build",
-      "group": "build",
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      },
       "problemMatcher": []
     }
   ]
